--- a/public/styles/structure.css
+++ b/public/styles/structure.css
@@ -121,7 +121,6 @@ p{
 .profile-details{
   font-size: 1.25rem;
   background-color: #F5F5F5;
-  margin: 0;
   width: 375px;
 }
 
@@ -130,9 +129,10 @@ form{
   flex-flow: column wrap;
   justify-content: space-around;
   align-items: center;
-  margin: 10px 10px 10px 20px;
+  /*margin: 10px 10px 10px 20px;*/
 
 }
+
 
 .form-row{
   flex-basis: auto;
